--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,6 @@
-# zig build artifacts
-zig-cache/
-zig-out/
-/release/
-/debug/
-/build/
-/build-*/
-/docgen_tmp/
-
 # libctorch build artifact
-ctorch/build/
-ctorch/cmake-output/
-
-# ocaml gen 
-_build/
+build/
+cmake-output/
 
 *.bak*
 *.swp
